// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StartOverDropdownTest render 1`] = `
<DocumentFragment>
  <div>
    <mock-menu>
      <mock-menutrigger
        disablebuttonenhancement="true"
      >
        <mock-menubutton
          appearance="transparent"
          aria-label="start over menu"
          icon="[object Object]"
          menuicon="[object Object]"
        >
          Start over V9
        </mock-menubutton>
      </mock-menutrigger>
      <mock-menupopover
        style="border-radius: unset !important;"
      >
        <mock-menulist>
          <mock-menuitem
            name="Start over all test suffix stub"
          >
            Start over all test suffix stub
          </mock-menuitem>
          <mock-menuitem
            name="Start over single test suffix stub"
          >
            Start over single test suffix stub
          </mock-menuitem>
        </mock-menulist>
      </mock-menupopover>
    </mock-menu>
  </div>
</DocumentFragment>
`;

exports[`StartOverDropdownTest render with dropdown on left 1`] = `
<DocumentFragment>
  <div>
    <mock-menu>
      <mock-menutrigger
        disablebuttonenhancement="true"
      >
        <mock-menubutton
          appearance="transparent"
          aria-label="start over menu"
          icon="[object Object]"
          menuicon="[object Object]"
        >
          Start over V9
        </mock-menubutton>
      </mock-menutrigger>
      <mock-menupopover
        style="border-radius: unset !important;"
      >
        <mock-menulist>
          <mock-menuitem
            name="Start over all test suffix stub"
          >
            Start over all test suffix stub
          </mock-menuitem>
          <mock-menuitem
            name="Start over single test suffix stub"
          >
            Start over single test suffix stub
          </mock-menuitem>
        </mock-menulist>
      </mock-menupopover>
    </mock-menu>
  </div>
</DocumentFragment>
`;

exports[`StartOverDropdownTest render with dropdown on left: MenuButton props 1`] = `
{
  "appearance": "transparent",
  "aria-label": "start over menu",
  "children": "Start over V9",
  "icon": <ForwardRef(ArrowClockwiseRegular)
    className="refreshIcon"
  />,
  "menuIcon": <span
    className="chevron"
  >
    <ForwardRef(ChevronRight20Regular) />
  </span>,
}
`;

exports[`StartOverDropdownTest render: MenuButton props 1`] = `
{
  "appearance": "transparent",
  "aria-label": "start over menu",
  "children": "Start over V9",
  "icon": <ForwardRef(ArrowClockwiseRegular)
    className="refreshIcon"
  />,
  "menuIcon": <span
    className="chevron"
  >
    <ForwardRef(ChevronDown20Regular) />
  </span>,
}
`;

exports[`StartOverDropdownTest render: MenuList props 1`] = `
{
  "children": [
    <ForwardRef(MenuItem)
      name="Start over all test suffix stub"
      onClick={[Function]}
    >
      Start over all test suffix stub
    </ForwardRef(MenuItem)>,
    <ForwardRef(MenuItem)
      name="Start over single test suffix stub"
      onClick={[Function]}
    >
      Start over single test suffix stub
    </ForwardRef(MenuItem)>,
  ],
}
`;
